# SurfelPlyViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: UseTinyPLY.cmake
cmake/cmake_macro_addExternalProject/: ExternalProject.cmake.in  macro.cmake
libSurfelPlyViewer/: CMakeLists.txt  ImGuiExtension.cpp  ImGuiExtension.h  SurfelDrawer.cpp  SurfelDrawer.h  SurfelGUI.cpp  SurfelGUI.h  SurfelPlyLoader.h  surfel.h
